# csc3002_3d_raycaster_game

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  UnsolvedProblem.md  UnsolvedProblem.txt  data.h  map_editor.py  raycaster  raycaster.c  raycaster.cpp
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
developerTool/: README.md  docs.md  map_editor.py  texture_editor.py
include/core/: Config.h  Game.h  TextureMapping.h  Types.h  texture_mapping.txt
include/data/maps/: level1.h  level2.h  level3.h
include/data/textures/: 1.h  Bamboo_idle.h  Bamboo_throw.h  Banana_idle.h  Banana_throw.h  CUHK_SZ.h  Hajimi.h  Hippo_1.h  Hippo_2.h  Hippo_3.h  Monkey_1.h  Monkey_2.h  Monkey_3.h  Panda_1.h  Panda_2.h  Panda_3.h  Watermelon_idle.h  Watermelon_throw.h  brick.h  ceiling.h  concrete.h  dirt.h  firedgun.h  glass.h  grass.h  marble.h  metal.h  pistol.h  stone.h  unfiredgun.h  wood.h
include/entities/: Enemy.h  Player.h  Weapon.h
include/input/: InputManager.h
include/rendering/: Renderer.h  TextureManager.h
include/ui/: Menu.h
include/world/: Map.h  Raycaster.h
src/: .main.cpp.swp  main.cpp
src/core/: Game.cpp
src/entities/: Enemy.cpp  Player.cpp  Weapon.cpp
src/input/: InputManager.cpp
src/rendering/: Renderer.cpp  TextureManager.cpp
src/ui/: Menu.cpp
src/world/: Map.cpp  Raycaster.cpp
